--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "@reduxjs/toolkit": "^2.2.6",
     "@types/axios": "^0.14.0",
     "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
+    "jwt-decode": "^4.0.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "react-router": "^6.24.1",
+    "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
     "@types/node": "^20",
