--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18",
     "react-redux": "^9.1.2",
     "react-router": "^6.24.1",
-    "react-router-dom": "^6.24.1"
+    "react-router-dom": "^6.24.1",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
