--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-apiLink=http://localhost:8181/api
-imageLink=http://localhost:8181/storage
+apiLink=http://host.docker.internal:8181/api
+imageLink=http://host.docker.internal:8181/storage
