--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.8'
 
 services:
   nextjs:
@@ -13,4 +13,10 @@ services:
     # environment:
     #   - NODE_ENV=development
     command: npm run dev
+  #   depends_on:
+  #     - backend-service
+  # backend-service:
+  #   image: blog-api-app
+  #   ports:
+  #     - '8181:8181'
 
