--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 apiLink=http://host.docker.internal:8181/api
 imageLink=http://host.docker.internal:8181/storage
+NEXT_PUBLIC_API_URL=http://host.docker.internal:8181/api
+NEXT_PUBLIC_API_IMAGE=http://host.docker.internal:8181/storage
